# codeshift.az

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
config/: .env.template
docker/: docker-compose.dev.yml  docker-compose.prod.yml
docker/django/: Dockerfile  entrypoint.sh
docker/django/gunicorn/: start.sh
docker/nginx/: default.conf
locale/az/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
server/: settings.py  urls.py
server/apps/base/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
server/apps/base/logic/: forms.py  processors.py
server/apps/base/migrations/: 0001_initial.py
server/apps/base/templates/base/: about.html  contact.html  index.html  layout.html
server/apps/portfolio/: admin.py  apps.py  context_processors.py  models.py  translation.py  urls.py  views.py
server/apps/portfolio/logic/: processors.py  translation.py
server/apps/portfolio/migrations/: 0001_initial.py  0002_project_modified_at.py
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py  custom.py  database.py  i18n.py  internationalization.py
server/settings/environments/: development.py  local.py  prod.py  production.py
static/assets/css/: animate.min.css  bootstrap.min.css  font-awesome.min.css  jquery-ui.css  main.css  meanmenu.css  odometer.min.css  owl.carousel.min.css  owl.video.play.html  ukit.css
static/assets/js/: jquery.meanmenu.min.js  main.js  uikit.js  waypoint.js
(+3 files in other folders)
