[tool.poetry]
name = "codeshift"
version = "0.1.0"
description = ""
authors = ["Tarlan Soltanov <tarlansoltanov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
django-split-settings = "^1.2.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.6"
pillow = "^9.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
